developer portal link added

--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,7 @@
 
       <div class="step1container">
         <p><label>Step 1: </label> please enter client id and secret key to generate token</p>
+        <p>If you don't have clientid and client secret, signup here <a target='_blank' href="http://developer.autodesk.com">developer portal</a> and create app here <a target='_blank' href="https://developer.autodesk.com/myapps">apps page</a> </p>
         <label>Client Id: &nbsp;&nbsp; </label><input type="text" class="clientid" />&nbsp;&nbsp;&nbsp;&nbsp;
         <label>Client Secret: &nbsp;&nbsp;</label><input type="text" class="clientsecret" /><br><br>
         <button class="generatetoken btn btn-success">Generate token</button><br><br>
